application proporties 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,6 @@ spring.datasource.initialization-mode=always
 spring.datasource.data=classpath:data.sql
 spring.jpa.hibernate.ddl-auto=none
 
-spring.security.oauth2.client.registration.google.client-id=9418490106-htidr9uiia9p99647g46l17se170fv2u.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret= j_zD5Qo50d519bGr1uKI8vxK
+spring.security.oauth2.client.registration.google.client-id=
+spring.security.oauth2.client.registration.google.client-secret=
 spring.security.oauth2.client.registration.google.scope= email,profile
